Fix opaque frame popup titlebar not being painted.

R=pkasting@chromium.org,thomasanderson@chromium.org
BUG=695473,670959

Review-Url: https://codereview.chromium.org/2741603002
Cr-Commit-Position: refs/heads/master@{#455885}

Former-commit-id: 683596645abbc42f0c20768c1579a578f5b36553