chrome/browser/ui/views/frame/opaque_browser_frame_view.cc
@@ -510,7 +510,8 @@ bool OpaqueBrowserFrameView::ShouldShowWindowTitleBar() const {
 
 int OpaqueBrowserFrameView::GetTopAreaHeight() const {
   const gfx::ImageSkia frame_image = GetFrameImage();
-  int top_area_height = frame_image.height();  // Returns 0 if isNull().
+  int top_area_height =
+      std::max(frame_image.height(), layout_->NonClientTopHeight(false));
   if (browser_view()->IsTabStripVisible()) {
     top_area_height =
         std::max(top_area_height,
